--- a/Basil.Bulldozzer_Regression_project.ipynb
+++ b/Basil.Bulldozzer_Regression_project.ipynb
@@ -5,7 +5,7 @@
    "id": "6e6c70b2-dd82-4bdd-85f7-aa509df78e4a",
    "metadata": {},
    "source": [
-    "# Predicting the price of Bulldozzers using Machine Learning\n",
+    "# Prediction of the price of Bulldozzers using Machine Learning\n",
     "ML project wiith the aimof predicting the price of Bulldozzers\n",
     "## 1. Project definition\n",
     "How well can we predict the future price of a bulldozzer, given its characteristics and the examples of previous prices of how much the similar bulldozzers were sold at.\n",
